--- a/css/style.css
+++ b/css/style.css
@@ -161,6 +161,7 @@ h3{
   color: #2d2d2d;
   font-family: 'Montserrat', sans-serif;;
   font-size: 34px;
+  text-align: left;
 }
 .link{
   font-family: 'Montserrat', sans-serif;
